[package]
name = "iptools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
config-finder = "0.1.2"
either = "1.11.0"
evalexpr = { version = "11.3.0", features = ["rand", "regex_support"] }
ipnet = "2.9.0"
itertools = "0.12.1"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.12"

[profile.release]
strip = true