[package]
name = "iptools"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
config-finder = "0.1.2"
either = "1.13.0"
evalexpr = { version = "12.0.2", features = ["rand", "regex"] }
ipnet = "2.11.0"
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
toml = "0.8.20"

[profile.release]
strip = true