[package]
name = "iptools"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
config-finder = "0.1.2"
either = "1.15.0"
evalexpr = { version = "13.1.0", features = ["rand", "regex"] }
ipnet = "2.12.0"
itertools = "0.14.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.0.6"

[profile.release]
strip = true